--- a/DFS.ipynb
+++ b/DFS.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "training.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,15 +15,25 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BMIlwvcNAmLj",
+        "colab_type": "text"
+      },
+      "source": [
+        "<img src='graph.png' width=80% />"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "40dFpSv4lYnP",
+        "id": "YpsyeSZK0Hxn",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 118
         },
-        "outputId": "7e2820ce-43cc-4c1d-a4dd-45f9c454a4d1"
+        "outputId": "3aa43da7-428d-4251-e430-8c5ef2c91025"
       },
       "source": [
         "# Using a Python dictionary to act as an adjacency list\n",
