--- a/BFS.ipynb
+++ b/BFS.ipynb
@@ -1,72 +1,92 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Untitled0.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='graph.png' width=80% />"
+   ]
   },
-  "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 118
+    },
+    "colab_type": "code",
+    "id": "HufcVJfqx3JL",
+    "outputId": "394ed320-b023-4092-ed68-91395ebade33"
+   },
+   "outputs": [
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HufcVJfqx3JL",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 118
-        },
-        "outputId": "394ed320-b023-4092-ed68-91395ebade33"
-      },
-      "source": [
-        "# Using a Python dictionary to act as an adjacency list\n",
-        "graph = {\n",
-        "    'A' : ['B','C'],\n",
-        "    'B' : ['D', 'E'],\n",
-        "    'C' : ['F'],\n",
-        "    'D' : [],\n",
-        "    'E' : ['F'],\n",
-        "    'F' : []\n",
-        "}\n",
-        "\n",
-        "visited=[] # Array to keep track of visited nodes.\n",
-        "\n",
-        "\n",
-        "def bfs(graph, root):\n",
-        "     queue = [root]\n",
-        "     visited.append(root)\n",
-        "     while queue:\n",
-        "        vertex = queue.pop(0)\n",
-        "        for neighbour in graph[vertex]:\n",
-        "            if neighbour not in visited:\n",
-        "                visited.append(neighbour)\n",
-        "                queue.append(neighbour)\n",
-        "\n",
-        "\n",
-        "bfs(graph, 'A')\n",
-        "for i in visited :\n",
-        "  print(i)"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "A\n",
-            "B\n",
-            "C\n",
-            "D\n",
-            "E\n",
-            "F\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "B\n",
+      "C\n",
+      "D\n",
+      "E\n",
+      "F\n"
+     ]
     }
-  ]
+   ],
+   "source": [
+    "# Using a Python dictionary to act as an adjacency list\n",
+    "graph = {\n",
+    "    'A' : ['B','C'],\n",
+    "    'B' : ['D', 'E'],\n",
+    "    'C' : ['F'],\n",
+    "    'D' : [],\n",
+    "    'E' : ['F'],\n",
+    "    'F' : []\n",
+    "}\n",
+    "\n",
+    "visited=[] # Array to keep track of visited nodes.\n",
+    "\n",
+    "\n",
+    "def bfs(graph, root):\n",
+    "     queue = [root]\n",
+    "     visited.append(root)\n",
+    "     while queue:\n",
+    "        vertex = queue.pop(0)\n",
+    "        for neighbour in graph[vertex]:\n",
+    "            if neighbour not in visited:\n",
+    "                visited.append(neighbour)\n",
+    "                queue.append(neighbour)\n",
+    "\n",
+    "\n",
+    "bfs(graph, 'A')\n",
+    "for i in visited :\n",
+    "  print(i)"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "name": "Untitled0.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
